add helper method in UserGlobalExceptionHandlerTest