@@ -20,7 +20,6 @@ import reactor.core.publisher.Mono;
 import java.util.Set;
 import java.util.UUID;
 
-import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.*;
 
 class UserControllerTest {
@@ -644,8 +643,8 @@ class UserControllerTest {
                 .hasSize(2)
                 .value(list -> {
                     
-                    Assertions.assertEquals(sol1.getUserId(), list.get(0).getUserId());
-                    Assertions.assertEquals(sol1.getChallengeId(), list.get(0).getChallengeId());
+                    Assertions.assertEquals(sol1.getUserId(), list.getFirst().getUserId());
+                    Assertions.assertEquals(sol1.getChallengeId(), list.getFirst().getChallengeId());
                     Assertions.assertEquals(sol1.getLanguageId(), list.get(0).getLanguageId());
                     Assertions.assertEquals(sol1.getSolutionText(), list.get(0).getSolutionText());
                     
